# JIMP2

./: .travis.yml  CMakeLists.txt  README.md
lab10/academiascheduler/: CMakeLists.txt  Scheduler.cpp  Scheduler.h  main.cpp
lab10/algo/: Algo.cpp  Algo.h  main.cpp
lab11/factorymethod/: CMakeLists.txt  FactoryMethod.cpp  FactoryMethod.h  main.cpp
lab12/: CMakeLists.txt
lab12/academiasequentialgenerator/: SequentialGenerator.cpp  SequentialGenerator.h  main.cpp
lab12/academiateacherhash/: TeacherHash.cpp  TeacherHash.h
lab12/timerecorder/: TimeRecorder.cpp  TimeRecorder.h
lab12/treeiterators/: Tree.cpp  Tree.h  TreeIterators.cpp  TreeIterators.h  main.cpp
lab13/arabicroman/: ArabicToRoman.cpp  ArabicToRoman.h  CMakeLists.txt  main.cpp
lab2/polybius/: Polybius.cpp  Polybius.h  main.cpp
lab3/minimaltimedifference/: CMakeLists.txt  MinimalTimeDifference.cpp  MinimalTimeDifference.h  main.cpp
lab3/tinyurl/: CMakeLists.txt  Tinyurl.cpp  Tinyurl.h  main.cpp
lab4/: CMakeLists.txt
lab4/name/: CMakeLists.txt  Name.cpp  Name.h  main.cpp
lab4/netsjson/: SimpleJson.cpp  SimpleJson.h  main.cpp
lab5/: CMakeLists.txt
lab5/marsjanie/: CMakeLists.txt  Marsjanie.cpp  Marsjanie.h  main.cpp
lab5/matrix/: CMakeLists.txt  Matrix.cpp  Matrix.h  main.cpp
lab5/rodzicdziecko/: CMakeLists.txt  RodzicDziecko.cpp  RodzicDziecko.h  main.cpp
lab6/: CMakeLists.txt
lab6/wordcounter/: WordCounter.cpp  WordCounter.h  main.cpp
lab6/zad1/: CMakeLists.txt  TestDziedziczenie.cpp  Zad1.h  main.cpp
lab7/: CMakeLists.txt
lab7/iterable/: CMakeLists.txt  Iterable.cpp  Iterable.h  main.cpp
lab7/zad4/: CMakeLists.txt  Zad4.cpp  Zad4.h  main.cpp
lab7/zad8/: CMakeLists.txt  Kolo.h  Kula.h  Zad8.cpp  main.cpp
lab8/: CMakeLists.txt
lab8/testdziedziczenie/: CMakeLists.txt  main.cpp
lab9/academiaserializer/: CMakeLists.txt  Serialization.cpp  Serialization.h  main.cpp
scripts/: cpplint.py
(+22 files in other folders)
